--- a/app/views/feed_previews/show.html.erb
+++ b/app/views/feed_previews/show.html.erb
@@ -1,13 +1,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h1 class="mb-0">Feed Preview</h1>
-  <div class="d-flex gap-2">
-    <% if @feed_preview.ready? %>
-      <%= button_to "Refresh Preview", feed_preview_path(@feed_preview),
-          method: :patch,
-          class: "btn btn-outline-secondary",
-          data: { confirm: "This will generate a new preview. Continue?" } %>
-    <% end %>
-    <%= link_to "Back to Feeds", feeds_path, class: "btn btn-outline-secondary" %>
+  <div id="header-actions">
+    <%= render "feed_previews/header_actions", feed_preview: @feed_preview %>
   </div>
 </div>
 
