--- a/app/views/feed_previews/show.html.erb
+++ b/app/views/feed_previews/show.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1 class="mb-0">Feed Preview</h1>
+  <h1>Feed Preview</h1>
   <div id="header-actions">
     <%= render "feed_previews/header_actions", feed_preview: @feed_preview %>
   </div>
