--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1 class="mb-0"><%= @feed.name %></h1>
+  <h1><%= @feed.name %></h1>
   <div class="d-flex gap-2 align-items-center">
     
     <% if @feed.enabled? %>
