--- a/app/views/access_tokens/edit.html.erb
+++ b/app/views/access_tokens/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1 class="mb-0">Replace Token</h1>
+  <h1>Replace Token</h1>
   <%= link_to "← Back to Access Tokens", access_tokens_path, class: "btn btn-outline-secondary" %>
 </div>
 
