--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1 class="mb-0">Access Tokens</h1>
+  <h1>Access Tokens</h1>
   <%= link_to "Create New Token", new_access_token_path, class: "btn btn-primary" %>
 </div>
 
