--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Profile" %>
+<% content_for :title, "Settings" %>
 
-<h1>Profile</h1>
+<h1>Settings</h1>
 
 <div class="row">
   <div class="col-6">
