Change Profile to Settings in dropdown

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
                   <%= Current.user.email_address %>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><%= link_to "Profile", profile_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "Settings", profile_path, class: "dropdown-item" %></li>
                   <li><%= link_to "Tokens", access_tokens_path, class: "dropdown-item" %></li>
                   <% if policy(Event).index? %>
                     <li><hr class="dropdown-divider"></li>
