Replace email with gear icon in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <%= Current.user.email_address %>
+                  <i class="bi bi-gear"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><%= link_to "Settings", profile_path, class: "dropdown-item" %></li>
