--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,9 @@
 <% content_for :title, "Settings" %>
 
-<h1>Settings</h1>
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h1>Settings</h1>
+  <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "btn btn-outline-danger" %>
+</div>
 
 <div class="row">
   <div class="col-6">
