Make Sign Out button not dangerous

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h1>Settings</h1>
-  <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "btn btn-outline-danger" %>
+  <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "btn btn-outline-secondary" %>
 </div>
 
 <div class="row">
