--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,26 +46,19 @@
               <li class="nav-item">
                 <%= link_to "Feeds", feeds_path, class: "nav-link #{'active' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
               </li>
+              <% if policy(Event).index? %>
+                <li class="nav-item">
+                  <%= link_to "Events", events_path, class: "nav-link #{'active' if current_page?(events_path) || controller_name == 'events'}" %>
+                </li>
+              <% end %>
             </ul>
 
             <%# Dropdown menu %>
             <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <%= Current.user.email_address %>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end">
-                  <li><%= link_to "Profile", profile_path, class: "dropdown-item" %></li>
-                  <li><%= link_to "Tokens", access_tokens_path, class: "dropdown-item" %></li>
-                  <% if policy(Event).index? %>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><%= link_to "Events", events_path, class: "dropdown-item" %></li>
-                  <% end %>
-                  <li><hr class="dropdown-divider"></li>
-                  <li>
-                    <%= link_to "Sign Out", session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
-                  </li>
-                </ul>
+              <li class="nav-item">
+                <%= link_to profile_path, class: "nav-link" do %>
+                  <i class="bi bi-gear"></i>
+                <% end %>
               </li>
             </ul>
           </div>
