--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
             <%# Dropdown menu %>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <%= link_to profile_path, class: "nav-link" do %>
+                <%= link_to settings_path, class: "nav-link" do %>
                   <i class="bi bi-gear"></i>
                 <% end %>
               </li>
