--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -12,22 +12,8 @@
         <h4 class="card-title mb-0">Email Address</h4>
       </div>
       <div class="card-body">
-        <%= form_with model: @user, url: email_update_path, method: :patch, local: true, class: "mb-4" do |form| %>
-          <h5 class="mb-3">Email Address</h5>
-
-          <div class="mb-3">
-            <p>Current email: <strong class="mx-2"><%= @user.email_address %></strong></p>
-          </div>
-
-          <div class="mb-3">
-            <%= form.label :email_address, "New email:", class: "form-label" %>
-            <%= form.email_field :email_address, value: "", class: "form-control", placeholder: "Enter new email address" %>
-          </div>
-
-          <div>
-            <%= form.submit "Update Email", class: "btn btn-primary" %>
-          </div>
-        <% end %>
+        <p>Current email: <strong><%= @user.email_address %></strong></p>
+        <%= link_to "Change Email Address", edit_settings_email_update_path, class: "btn btn-primary" %>
       </div>
     </div>
     <% if @user.permissions.any? %>
