--- a/app/views/settings/access_tokens/edit.html.erb
+++ b/app/views/settings/access_tokens/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h1>Replace Token</h1>
-  <%= link_to "← Back to Access Tokens", access_tokens_path, class: "btn btn-outline-secondary" %>
+  <%= link_to "← Back to Access Tokens", settings_access_tokens_path, class: "btn btn-outline-secondary" %>
 </div>
 
 <div class="row">
