--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -47,7 +47,7 @@
       </div>
       <div class="card-body">
         <p>Manage API access tokens for external integrations.</p>
-        <%= link_to "Manage Access Tokens", access_tokens_path, class: "btn btn-primary" %>
+        <%= link_to "Manage Access Tokens", settings_access_tokens_path, class: "btn btn-primary" %>
       </div>
     </div>
   </div>
