--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h1>Access Tokens</h1>
-  <%= link_to "Create New Token", new_access_token_path, class: "btn btn-primary" %>
+  <%= link_to "Create New Token", new_settings_settings_access_token_path, class: "btn btn-primary" %>
 </div>
 
 <% if @access_tokens.inactive.exists? %>
@@ -46,12 +46,12 @@
               <% end %>
             </td>
             <td class="text-end">
-              <%= link_to "Validate", access_token_validation_path(access_token),
+              <%= link_to "Validate", settings_access_token_validation_path(access_token),
                           class: "text-decoration-none me-3",
                           data: { turbo_method: :post } %>
-              <%= link_to "Replace", edit_access_token_path(access_token),
+              <%= link_to "Replace", edit_settings_settings_access_token_path(access_token),
                           class: "text-decoration-none me-3" %>
-              <%= link_to "Delete", access_token_path(access_token),
+              <%= link_to "Delete", settings_access_token_path(access_token),
                           class: "text-danger text-decoration-none",
                           data: {
                             turbo_method: :delete,
@@ -68,7 +68,7 @@
     <div class="card-body text-center py-5">
       <h5>No access tokens yet</h5>
       <p class="text-muted mb-4">Add Freefeed API access token to enable content reposting.</p>
-      <%= link_to "Create New Token", new_access_token_path, class: "btn btn-primary" %>
+      <%= link_to "Create New Token", new_settings_settings_access_token_path, class: "btn btn-primary" %>
     </div>
   </div>
 <% end %>
