--- a/app/views/settings/password_updates/edit.html.erb
+++ b/app/views/settings/password_updates/edit.html.erb
@@ -7,32 +7,25 @@
 
 <div class="row">
   <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <h4 class="card-title mb-0">Update Password</h4>
+    <%= form_with model: @user, url: settings_password_update_path, method: :patch, local: true do |form| %>
+      <div class="mb-3">
+        <%= form.label :current_password, "Current password:", class: "form-label" %>
+        <%= form.password_field :current_password, class: "form-control", required: true %>
       </div>
-      <div class="card-body">
-        <%= form_with model: @user, url: settings_password_update_path, method: :patch, local: true do |form| %>
-          <div class="mb-3">
-            <%= form.label :current_password, "Current password:", class: "form-label" %>
-            <%= form.password_field :current_password, class: "form-control", required: true %>
-          </div>
 
-          <div class="mb-3">
-            <%= form.label :password, "New password:", class: "form-label" %>
-            <%= form.password_field :password, class: "form-control", required: true %>
-          </div>
-
-          <div class="mb-3">
-            <%= form.label :password_confirmation, "Confirm new password:", class: "form-label" %>
-            <%= form.password_field :password_confirmation, class: "form-control", required: true %>
-          </div>
-
-          <div>
-            <%= form.submit "Change Password", class: "btn btn-primary" %>
-          </div>
-        <% end %>
+      <div class="mb-3">
+        <%= form.label :password, "New password:", class: "form-label" %>
+        <%= form.password_field :password, class: "form-control", required: true %>
       </div>
-    </div>
+
+      <div class="mb-3">
+        <%= form.label :password_confirmation, "Confirm new password:", class: "form-label" %>
+        <%= form.password_field :password_confirmation, class: "form-control", required: true %>
+      </div>
+
+      <div class="mt-4">
+        <%= form.submit "Change Password", class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
 </div>
