Add Cancel buttons to email and password update forms

--- a/app/views/settings/email_updates/edit.html.erb
+++ b/app/views/settings/email_updates/edit.html.erb
@@ -18,7 +18,8 @@
       </div>
 
       <div class="mt-4">
-        <%= form.submit "Update Email", class: "btn btn-primary" %>
+        <%= form.submit "Update Email", class: "btn btn-primary me-2" %>
+        <%= link_to "Cancel", settings_path, class: "btn btn-outline-secondary" %>
       </div>
     <% end %>
   </div>
