--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="mb-0">Access Tokens</h1>
   <div class="d-flex align-items-center">
     <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
-    <%= link_to "← Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
+    <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
   </div>
 </div>
 
