--- a/app/views/settings/password_updates/edit.html.erb
+++ b/app/views/settings/password_updates/edit.html.erb
@@ -24,7 +24,8 @@
       </div>
 
       <div class="mt-4">
-        <%= form.submit "Change Password", class: "btn btn-primary" %>
+        <%= form.submit "Change Password", class: "btn btn-primary me-2" %>
+        <%= link_to "Cancel", settings_path, class: "btn btn-outline-secondary" %>
       </div>
     <% end %>
   </div>
