Settings page layout improvements and password tracking (#67)
* Add password_updated_at column to users table

* Initialize password_updated_at on user creation

* Update password_updated_at when password changes

* Update seed script to set password_updated_at for existing users

* Make password_updated_at non-nullable

* Redesign Settings page with new layout

* Add password_updated_at to test fixtures

* Remove redundant cards and improve form spacing and navigation

* Add Cancel buttons to email and password update forms

* Display permissions list on one line

--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,6 +1,9 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Access Tokens</h1>
-  <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary" %>
+  <h1 class="mb-0">Access Tokens</h1>
+  <div class="d-flex align-items-center">
+    <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
+    <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
+  </div>
 </div>
 
 <% if @access_tokens.inactive.exists? %>
