--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -6,48 +6,34 @@
 </div>
 
 <div class="row">
-  <div class="col-6">
-    <div class="card mb-4">
-      <div class="card-header">
-        <h4 class="card-title mb-0">Email Address</h4>
+  <div class="col-12">
+    <div class="list-group">
+      <div class="list-group-item">
+        <strong>Email:</strong> <%= @user.email_address %>
+        <%= link_to "Change", edit_settings_email_update_path, class: "text-decoration-none ms-2" %>
       </div>
-      <div class="card-body">
-        <p>Current email: <strong><%= @user.email_address %></strong></p>
-        <%= link_to "Change Email Address", edit_settings_email_update_path, class: "btn btn-primary" %>
+
+      <div class="list-group-item">
+        <strong>Password:</strong> last updated <%= time_ago_in_words(@user.password_updated_at || @user.created_at) %> ago
+        <%= link_to "Change", edit_settings_password_update_path, class: "text-decoration-none ms-2" %>
       </div>
-    </div>
-    <% if @user.permissions.any? %>
-      <div class="card mb-4">
-        <div class="card-header">
-          <h4 class="card-title mb-0">Permissions</h4>
+
+      <% if @user.permissions.any? %>
+        <div class="list-group-item">
+          <strong>Permissions:</strong>
+          <%= @user.permissions.map { |permission| permission.name.humanize }.join(", ") %>
         </div>
-        <div class="card-body">
-          <ul class="col-sm-8 mb-0">
-            <% @user.permissions.each do |permission| %>
-              <li><%= permission.name.humanize %></li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    <% end %>
-  </div>
-  <div class="col-6">
-    <div class="card mb-4">
-      <div class="card-header">
-        <h4 class="card-title mb-0">Password</h4>
-      </div>
-      <div class="card-body">
-        <p>Secure your account with a strong password.</p>
-        <%= link_to "Change Password", edit_settings_password_update_path, class: "btn btn-primary" %>
-      </div>
-    </div>
-    <div class="card mb-4">
-      <div class="card-header">
-        <h4 class="card-title mb-0">Access Tokens</h4>
-      </div>
-      <div class="card-body">
-        <p>Manage API access tokens for external integrations.</p>
-        <%= link_to "Manage Access Tokens", settings_access_tokens_path, class: "btn btn-primary" %>
+      <% end %>
+
+      <div class="list-group-item">
+        <strong>Tokens:</strong>
+        <% if @access_tokens.any? %>
+          <%= pluralize(@access_tokens.active.count, 'active') %><% if @access_tokens.inactive.any? %>, <%= pluralize(@access_tokens.inactive.count, 'inactive') %><% end %>
+          <%= link_to "Manage", settings_access_tokens_path, class: "text-decoration-none ms-2" %>
+        <% else %>
+          none configured
+          <%= link_to "Add a token", new_settings_access_token_path, class: "text-decoration-none ms-2" %>
+        <% end %>
       </div>
     </div>
   </div>
