--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,9 +1,8 @@
 <div class="row">
   <div class="col-12">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1>Feeds</h1>
+    <%= page_header "Feeds" do %>
       <%= link_to "New Feed", new_feed_path, class: "btn btn-primary" %>
-    </div>
+    <% end %>
 
     <% if @feeds.any? %>
       <div class="table-responsive">
