Update remaining pages to use page_header helper

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,6 @@
 <% content_for :title, "Events" %>
 
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Events</h1>
-</div>
+<%= page_header "Events" %>
 
 <% if @events.any? %>
   <div class="table-responsive">
