--- a/app/views/settings/password_updates/edit.html.erb
+++ b/app/views/settings/password_updates/edit.html.erb
@@ -1,9 +1,8 @@
 <% content_for :title, "Change Password" %>
 
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Change Password</h1>
+<%= page_header "Change Password" do %>
   <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
-</div>
+<% end %>
 
 <div class="row">
   <div class="col-6">
