--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,6 +1,6 @@
 <%= page_header "Access Tokens" do %>
   <div class="d-flex align-items-center">
-    <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
+    <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
     <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
