--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,10 +1,9 @@
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1 class="mb-0">Access Tokens</h1>
+<%= page_header "Access Tokens" do %>
   <div class="d-flex align-items-center">
-    <%= link_to "Create New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
+    <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
     <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
   </div>
-</div>
+<% end %>
 
 <% if @access_tokens.inactive.exists? %>
   <div class="alert alert-secondary mb-4">
