--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -6,7 +6,7 @@
           <h1 class="card-title h3 mb-0">Create New Feed</h1>
         </div>
         <div class="card-body">
-          <%= render 'form', feed: @feed %>
+          <%= render 'new_form', feed: @feed %>
         </div>
       </div>
     </div>
