Fix cancel button functionality by using proper turbo_stream format

--- a/app/views/feeds/_content_source_form.html.erb
+++ b/app/views/feeds/_content_source_form.html.erb
@@ -32,8 +32,7 @@
 
   <div class="d-flex gap-2">
     <%= form.submit "Save Content Source", class: "btn btn-primary" %>
-    <%= link_to "Cancel", feed_path(feed, section: "content_source"),
-        class: "btn btn-outline-secondary",
-        data: { turbo_stream: true } %>
+    <%= link_to "Cancel", feed_path(feed, section: "content_source", format: :turbo_stream),
+        class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
