--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -59,7 +59,8 @@
 Content Source
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "content_source", format: :turbo_stream),
-        class: "btn btn-outline-primary btn-sm" %>
+        class: "btn btn-outline-primary btn-sm",
+        data: { turbo_prefetch: false } %>
   </div>
   <div class="card-body" id="content-source-display">
     <%= render "content_source_display", feed: @feed %>
@@ -78,7 +79,8 @@ Content Source
 Reposting Configuration
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "reposting", format: :turbo_stream),
-        class: "btn btn-outline-primary btn-sm" %>
+        class: "btn btn-outline-primary btn-sm",
+        data: { turbo_prefetch: false } %>
   </div>
   <div class="card-body" id="reposting-display">
     <%= render "reposting_display", feed: @feed %>
@@ -97,7 +99,8 @@ Reposting Configuration
 Scheduling Configuration
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "scheduling", format: :turbo_stream),
-        class: "btn btn-outline-primary btn-sm" %>
+        class: "btn btn-outline-primary btn-sm",
+        data: { turbo_prefetch: false } %>
   </div>
   <div class="card-body" id="scheduling-display">
     <%= render "scheduling_display", feed: @feed %>
