Change section titles to Source, Reposting Target, Schedule

--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -34,7 +34,7 @@
 
 
   <div class="d-flex gap-2">
-    <%= form.submit "Save Scheduling Configuration", class: "btn btn-primary" %>
+    <%= form.submit "Save Schedule", class: "btn btn-primary" %>
     <%= link_to "Cancel", feed_path(feed, section: "scheduling", format: :turbo_stream),
         class: "btn btn-outline-secondary",
         data: { turbo_prefetch: false } %>
