--- a/app/views/feeds/_content_source_form.html.erb
+++ b/app/views/feeds/_content_source_form.html.erb
@@ -31,7 +31,7 @@
   </div>
 
   <div class="d-flex gap-2">
-    <%= form.submit "Save Content Source", class: "btn btn-primary" %>
+    <%= form.submit "Save Source", class: "btn btn-primary" %>
     <%= link_to "Cancel", feed_path(feed, section: "content_source", format: :turbo_stream),
         class: "btn btn-outline-secondary",
         data: { turbo_prefetch: false } %>
