Prevent loading bar on Edit and Cancel button clicks

--- a/app/views/feeds/_content_source_form.html.erb
+++ b/app/views/feeds/_content_source_form.html.erb
@@ -34,6 +34,6 @@
     <%= form.submit "Save Source", class: "btn btn-primary" %>
     <%= link_to "Cancel", feed_path(feed, section: "content_source", format: :turbo_stream),
         class: "btn btn-outline-secondary",
-        data: { turbo_prefetch: false } %>
+        data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
 <% end %>
