--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -37,6 +37,6 @@
     <%= form.submit "Save Schedule", class: "btn btn-primary" %>
     <%= link_to "Cancel", feed_path(feed, section: "scheduling", format: :turbo_stream),
         class: "btn btn-outline-secondary",
-        data: { turbo_prefetch: false } %>
+        data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
 <% end %>
