--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -60,7 +60,7 @@ Source
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "content_source", format: :turbo_stream),
         class: "btn btn-outline-primary btn-sm",
-        data: { turbo_prefetch: false } %>
+        data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
   <div class="card-body" id="content-source-display">
     <%= render "content_source_display", feed: @feed %>
@@ -80,7 +80,7 @@ Reposting Target
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "reposting", format: :turbo_stream),
         class: "btn btn-outline-primary btn-sm",
-        data: { turbo_prefetch: false } %>
+        data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
   <div class="card-body" id="reposting-display">
     <%= render "reposting_display", feed: @feed %>
@@ -100,7 +100,7 @@ Schedule
     </h5>
     <%= link_to "Edit", edit_feed_path(@feed, section: "scheduling", format: :turbo_stream),
         class: "btn btn-outline-primary btn-sm",
-        data: { turbo_prefetch: false } %>
+        data: { turbo_prefetch: false, turbo_stream: true } %>
   </div>
   <div class="card-body" id="scheduling-display">
     <%= render "scheduling_display", feed: @feed %>
